--- a/templates/admin.html
+++ b/templates/admin.html
@@ -13,7 +13,7 @@
   	<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.css">
   	<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script>
   	<!-- Title -->
-  	<title>Connexion</title>
+  	<title>Admin</title>
   	<!-- Custom styles -->
   	<link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style/style.css') }}">
 
@@ -36,7 +36,7 @@
 		<br>
 		<br>
 
-    <div style= "background-color: rgb(42, 63, 84); color: white; padding: 15px; border-radius: 10px; margin-top: 0px; margin-bottom: 30px;">
+    <div style= "background-color: white; padding: 2px; border-radius: 10px; border: 1px solid grey; margin-top: 0px; margin-bottom: 30px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
   		<div style= "padding: 15px; border-radius: 10px; margin-top: 0px;">
         <form action="{{ url_for('create_settings') }}" method="post" class="form" role="form">
           <div class="form-group">
