--- a/templates/newDevice.html
+++ b/templates/newDevice.html
@@ -56,7 +56,7 @@
               <small style="font-size: 11px; color: white;">Par défaut, 72 heures - doit être supérieur au seuil de déclenchement du monitoring</small>
     				</d1>
     			</div>
-        <div style= "background-color: white; padding: 0px; border-radius: 10px; border: 1px solid grey; margin-top: 0px; margin: 30px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+        <div style= "background-color: white; padding: 0px; border-radius: 10px; border: 1px solid grey; margin-bottom: 20px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
           <div id="map" style="height: 650px; border-radius: 10px;"></div>
         </div>
       <input id="save" type=submit value="Sauvegarder" class="btn btn-success" style="margin-bottom: 0; margin-top: 0px; margin-left: 0;">
