--- a/templates/newDevice.html
+++ b/templates/newDevice.html
@@ -40,7 +40,7 @@
 
     <div style= "background-color: white; padding: 2px; border-radius: 10px; border: 1px solid grey; margin-top: 0px; margin-bottom: 30px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
   		<div style= "padding: 15px; border-radius: 10px; margin-top: 0px;">
-        <form action="{{ url_for('create_device') }}" method="post" class="form" role="form">
+        <!-- <form action="{{ url_for('create_device') }}" method="post" class="form" role="form"> -->
           <div class="form-group">
             <label>Rue</label>
             <br>
@@ -59,14 +59,14 @@
         <div style= "background-color: white; padding: 0px; border-radius: 10px; border: 1px solid grey; margin-bottom: 20px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
           <div id="map" style="height: 650px; border-radius: 10px;"></div>
         </div>
-      <input id="save" type=submit value="Sauvegarder" class="btn btn-success" style="margin-bottom: 0; margin-top: 0px; margin-left: 0;">
+      <input id="submit" type=submit value="Sauvegarder" class="btn btn-success" style="margin-bottom: 0; margin-top: 0px; margin-left: 0;">
       <input type=button onclick="window.location='/getEvents';" value="Retour" class="btn btn-warning" style="margin-bottom: 0; margin-top: 0px;">
       <br>
       {% if error %}
         <br>
         <p style="color: #ff3333;">{{error}}</p>
       {% endif %}
-      </form>
+      <!-- </form> -->
     </div>
     </div>
 
@@ -82,6 +82,8 @@
   });
 
   var i = 0
+  var lat = 0
+  var lng = 0
 
   map.on('click', onMapClick);
 
@@ -96,13 +98,28 @@
         var position = marker.getLatLng();
         marker.setLatLng(new L.LatLng(position.lat, position.lng),{draggable:'true'});
         map.panTo(new L.LatLng(position.lat, position.lng))
+        lat = position.lat
+        long = position.lng
         console.log(position.lat, position.lng)
       });
       map.addLayer(marker);
       i = 1
+      lat = position.lat
+      long = position.lng
     }
   };
 
   map.addLayer(layer);
+
+  $(document).ready( function() {
+        $('#submit').click(function() {
+           $.post(
+              "/newDevice",
+              { lat: lat, long: long }
+           ).done(function (reply) {
+              $('#reply').empty().append(reply);
+           });
+        });
+  });
 
   </script>
