--- a/templates/admin.html
+++ b/templates/admin.html
@@ -24,6 +24,7 @@
 		<nav class="navbar navbar-inverse navbar-fixed-top navbar-light bg-light" role="navigation">
       <a class="navbar-brand" href="/getEvents">Mon Parc</a>
       <a class="navbar-brand" href="/admin">Alertes</a>
+      <a class="navbar-brand" href="/newDevice">Gérer mes équipements</a>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent"></div>
 		</nav>
 
